tests/neg-custom-args/impl-conv/B.scala
package implConv

object B {
  import A._

  "".foo

  val x: Int = ""  // error: feature

}
